// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataTableColumns pinned 1`] = `
.c11 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: rgba(0, 0, 0, 0.24);
  stroke: rgba(0, 0, 0, 0.24);
}

.c11 g {
  fill: inherit;
  stroke: inherit;
}

.c11 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c11 *[stroke*='#'],
.c11 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c11 *[fill-rule],
.c11 *[FILL-RULE],
.c11 *[fill*='#'],
.c11 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c13 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c13 *[stroke*='#'],
.c13 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*='#'],
.c13 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c18 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #676767;
  stroke: #676767;
}

.c18 g {
  fill: inherit;
  stroke: inherit;
}

.c18 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c18 *[stroke*='#'],
.c18 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c18 *[fill-rule],
.c18 *[FILL-RULE],
.c18 *[fill*='#'],
.c18 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 12px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: flex-end;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background: none;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: flex-end;
  padding: 8px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 24px;
}

.c5 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

.c8 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 500;
}

.c15 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #676767;
  font-weight: undefined;
}

.c16 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #676767;
  font-weight: 500;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #2e2e2e;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 500;
  padding: 8px 8px;
  background-color: rgba(0, 0, 0, 0);
  color: rgba(0, 0, 0, 0.24);
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
  opacity: 1;
  background-color: rgba(0, 0, 0, 0);
  color: rgba(0, 0, 0, 0.24);
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
  text-align: center;
  opacity: 1;
  cursor: default;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c10 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c10:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) >circle,
.c10:focus:not(:focus-visible) >ellipse,
.c10:focus:not(:focus-visible) >line,
.c10:focus:not(:focus-visible) >path,
.c10:focus:not(:focus-visible) >polygon,
.c10:focus:not(:focus-visible) >polyline,
.c10:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #2e2e2e;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 500;
  padding: 8px 8px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c12 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c12:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #2e2e2e;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c12:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
}

.c12:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c12:focus >circle,
.c12:focus >ellipse,
.c12:focus >line,
.c12:focus >path,
.c12:focus >polygon,
.c12:focus >polyline,
.c12:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c12:focus ::-moz-focus-inner {
  border: 0;
}

.c12:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) >circle,
.c12:focus:not(:focus-visible) >ellipse,
.c12:focus:not(:focus-visible) >line,
.c12:focus:not(:focus-visible) >path,
.c12:focus:not(:focus-visible) >polygon,
.c12:focus:not(:focus-visible) >polyline,
.c12:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  cursor: move;
}

.c0 {
  min-height: 0;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c17 {
    padding: 8px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c6 {
    width: 12px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  aria-label="Order columns Tab Contents"
  class="c0"
  role="tabpanel"
>
  <div
    class="c1"
  >
    <ul
      aria-labelledby="test-data--order-columns-tab"
      class="c2"
      id="test-data--order-columns"
      role="list"
    >
      <li
        class="c3 c4"
        draggable="true"
      >
        <span
          class="c5"
        >
          1
        </span>
        <div
          class="c6"
        />
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Name
          </span>
        </div>
        <div
          class="c6"
        />
        <div
          class="c9"
        >
          <button
            aria-label="1 Name move up"
            class="c10"
            disabled=""
            id="NameMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c11"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="1 Name move down"
            class="c12"
            id="NameMoveDown"
            tabindex="0"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c13"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
      <li
        class="c14 "
      >
        <span
          class="c15"
        >
          2
        </span>
        <div
          class="c6"
        />
        <div
          class="c7"
        >
          <span
            class="c16"
          >
            Size
          </span>
        </div>
        <div
          class="c6"
        />
        <div
          class="c17"
        >
          <svg
            aria-label="Column locked, order cannot be changed."
            class="c18"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 23V11H5v12h14zm-7-8v4m5-8V7c0-3 0-6-5-6S7 4 7 7v4"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </div>
      </li>
      <li
        class="c3 c4"
        draggable="true"
      >
        <span
          class="c5"
        >
          3
        </span>
        <div
          class="c6"
        />
        <div
          class="c7"
        >
          <span
            class="c8"
          >
            Percent
          </span>
        </div>
        <div
          class="c6"
        />
        <div
          class="c9"
        >
          <button
            aria-label="2 Percent move up"
            class="c12"
            id="PercentMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c13"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="2 Percent move down"
            class="c10"
            disabled=""
            id="PercentMoveDown"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c11"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DataTableColumns remove column 1`] = `
<DocumentFragment>
  .c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 0 auto;
  justify-content: center;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #2e2e2e;
  font-weight: 500;
}

.c14 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 8px 8px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c3:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c3:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0, 0, 0, 0.36);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-top: 12px;
  padding-bottom: 11px;
}

.c7 >div {
  height: 100%;
  justify-content: center;
}

.c7 label {
  justify-content: center;
}

.c13 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0, 0, 0, 0.12);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-top: 12px;
  padding-bottom: 11px;
}

.c5 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c5 tbody tr:last-child td {
  border-color: transparent;
}

.c5 tbody tr:last-child th {
  border-color: transparent;
}

.c6 {
  position: relative;
  border-spacing: 0;
  border-collapse: separate;
  margin: 3px 0px;
  padding: 0px 3px;
}

.c12:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c12:focus >circle,
.c12:focus >ellipse,
.c12:focus >line,
.c12:focus >path,
.c12:focus >polygon,
.c12:focus >polyline,
.c12:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c12:focus ::-moz-focus-inner {
  border: 0;
}

.c12:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) >circle,
.c12:focus:not(:focus-visible) >ellipse,
.c12:focus:not(:focus-visible) >line,
.c12:focus:not(:focus-visible) >path,
.c12:focus:not(:focus-visible) >polygon,
.c12:focus:not(:focus-visible) >polyline,
.c12:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c12:last-child td {
  border-color: transparent;
}

.c12:last-child th {
  border-color: transparent;
}

.c11:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c11:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
    class="c0"
  >
    <div
      class="c1"
      id="test-data"
    >
      <form
        class="c2"
      >
        <button
          aria-label="Open column selector"
          class="c3"
          id="test-data--columns-control"
          type="button"
        >
          <svg
            aria-label="Splits"
            class="c4"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 22h22V2H1v20zM8 2v20V2zm8 0v20V2z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </form>
      <table
        class="c5 c6"
      >
        <thead
          class="StyledTable__StyledTableHeader-sc-1m3u5g-4 StyledDataTable__StyledDataTableHeader-sc-xrlyjm-5"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 "
          >
            <th
              class="c7 "
              id="grommet-data-table-header-name"
              scope="col"
            >
              <div
                class="c8"
              >
                <div
                  class="c9 "
                >
                  <span
                    class="c10"
                  >
                    Name
                  </span>
                </div>
              </div>
            </th>
            <th
              class="c7 "
              id="grommet-data-table-header-age"
              scope="col"
            >
              <div
                class="c8"
              >
                <div
                  class="c9 "
                >
                  <span
                    class="c10"
                  >
                    Age
                  </span>
                </div>
              </div>
            </th>
            <th
              class="c7 "
              id="grommet-data-table-header-size"
              scope="col"
            >
              <div
                class="c8"
              >
                <div
                  class="c9 "
                >
                  <span
                    class="c10"
                  >
                    Size
                  </span>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="StyledTable__StyledTableBody-sc-1m3u5g-3 c11"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 c12"
          >
            <th
              class="c13 "
              scope="row"
            >
              <div
                class="c9"
              >
                <span
                  class="c10"
                >
                  a
                </span>
              </div>
            </th>
            <td
              class="c13 "
            >
              <div
                class="c9"
              />
            </td>
            <td
              class="c13 "
            >
              <div
                class="c9"
              >
                <span
                  class="c14"
                >
                  s
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 c12"
          >
            <th
              class="c13 "
              scope="row"
            >
              <div
                class="c9"
              >
                <span
                  class="c10"
                >
                  b
                </span>
              </div>
            </th>
            <td
              class="c13 "
            >
              <div
                class="c9"
              />
            </td>
            <td
              class="c13 "
            >
              <div
                class="c9"
              >
                <span
                  class="c14"
                >
                  m
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataTableColumns remove column 2`] = `
.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  row-gap: 12px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 6px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 6px;
}

.c14 {
  box-sizing: border-box;
  stroke-width: 2px;
  stroke: #ffffff;
  width: 24px;
  height: 24px;
  stroke-width: 2px;
  stroke: #ffffff;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: start;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  padding: 0px;
  cursor: pointer;
  font-weight: 400;
  width: auto;
  border: 1px solid rgba(0, 0, 0, 0);
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: rgba(0, 0, 0, 0);
}

.c8 input:checked+span[class*=CheckBoxToggle]>span[class*=CheckBoxKnob] {
  left: 25px;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #ffffff;
}

.c13 {
  background: #008567;
  border-color: rgba(0, 0, 0, 0);
}

.c13:hover {
  background: #006750;
}

.c10 {
  flex-shrink: 0;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  padding-left: 42px;
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5::-webkit-input-placeholder {
  color: #676767;
}

.c5::-moz-placeholder {
  color: #676767;
}

.c5:-ms-input-placeholder {
  color: #676767;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  font-weight: 400;
}

.c5::-moz-placeholder {
  font-weight: 400;
}

.c5:-ms-input-placeholder {
  font-weight: 400;
}

.c2 {
  position: relative;
  width: 100%;
}

.c2 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

.c3 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 13px;
}

.c0 {
  min-height: 0;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    row-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 1px #ffffff;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 3px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  aria-label="Select columns Tab Contents"
  class="c0"
  role="tabpanel"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-label="Search"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
      <input
        autocomplete="off"
        class="c5"
        placeholder="Search"
        type="search"
        value=""
      />
    </div>
    <div
      class="c6"
    />
    <div
      aria-labelledby="test-data--select-columns-tab"
      class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
      id="test-data--select-columns"
      role="group"
    >
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 c13"
          >
            <svg
              class="c14"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          name
        </span>
      </label>
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 c13"
          >
            <svg
              class="c14"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          size
        </span>
      </label>
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 c13"
          >
            <svg
              class="c14"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          age
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`DataTableColumns renders 1`] = `
<DocumentFragment>
  .c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 0 auto;
  justify-content: center;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c14 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #2e2e2e;
  font-weight: 500;
}

.c18 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 8px 8px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c5:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 18px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #008567;
  color: #ffffff;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 600;
  padding: 5px 18px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c8:hover {
  background-color: rgba(0, 103, 80, 1);
  color: #ffffff;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 600;
}

.c8:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c8:focus >circle,
.c8:focus >ellipse,
.c8:focus >line,
.c8:focus >path,
.c8:focus >polygon,
.c8:focus >polyline,
.c8:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c8:focus ::-moz-focus-inner {
  border: 0;
}

.c8:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) >circle,
.c8:focus:not(:focus-visible) >ellipse,
.c8:focus:not(:focus-visible) >line,
.c8:focus:not(:focus-visible) >path,
.c8:focus:not(:focus-visible) >polygon,
.c8:focus:not(:focus-visible) >polyline,
.c8:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c11 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0, 0, 0, 0.36);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-top: 12px;
  padding-bottom: 11px;
}

.c11 >div {
  height: 100%;
  justify-content: center;
}

.c11 label {
  justify-content: center;
}

.c17 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0, 0, 0, 0.12);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-top: 12px;
  padding-bottom: 11px;
}

.c9 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c9 tbody tr:last-child td {
  border-color: transparent;
}

.c9 tbody tr:last-child th {
  border-color: transparent;
}

.c10 {
  position: relative;
  border-spacing: 0;
  border-collapse: separate;
  margin: 3px 0px;
  padding: 0px 3px;
}

.c16:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c16:focus >circle,
.c16:focus >ellipse,
.c16:focus >line,
.c16:focus >path,
.c16:focus >polygon,
.c16:focus >polyline,
.c16:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c16:focus ::-moz-focus-inner {
  border: 0;
}

.c16:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) >circle,
.c16:focus:not(:focus-visible) >ellipse,
.c16:focus:not(:focus-visible) >line,
.c16:focus:not(:focus-visible) >path,
.c16:focus:not(:focus-visible) >polygon,
.c16:focus:not(:focus-visible) >polyline,
.c16:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c16:last-child td {
  border-color: transparent;
}

.c16:last-child th {
  border-color: transparent;
}

.c15:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c15:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin-top: 12px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      id="test-data"
    >
      <form
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c1"
            >
              <button
                aria-label="Open column selector"
                class="c5"
                id="test-data--columns-control"
                type="button"
              >
                <svg
                  aria-label="Splits"
                  class="c6"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M1 22h22V2H1v20zM8 2v20V2zm8 0v20V2z"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
          <footer
            class="c7"
          >
            <button
              class="c8"
              type="submit"
            >
              Apply filters
            </button>
          </footer>
        </div>
      </form>
      <table
        class="c9 c10"
      >
        <thead
          class="StyledTable__StyledTableHeader-sc-1m3u5g-4 StyledDataTable__StyledDataTableHeader-sc-xrlyjm-5"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 "
          >
            <th
              class="c11 "
              id="grommet-data-table-header-name"
              scope="col"
            >
              <div
                class="c12"
              >
                <div
                  class="c13 "
                >
                  <span
                    class="c14"
                  >
                    Name
                  </span>
                </div>
              </div>
            </th>
            <th
              class="c11 "
              id="grommet-data-table-header-size"
              scope="col"
            >
              <div
                class="c12"
              >
                <div
                  class="c13 "
                >
                  <span
                    class="c14"
                  >
                    Size
                  </span>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="StyledTable__StyledTableBody-sc-1m3u5g-3 c15"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 c16"
          >
            <th
              class="c17 "
              scope="row"
            >
              <div
                class="c13"
              >
                <span
                  class="c14"
                >
                  a
                </span>
              </div>
            </th>
            <td
              class="c17 "
            >
              <div
                class="c13"
              >
                <span
                  class="c18"
                >
                  s
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 c16"
          >
            <th
              class="c17 "
              scope="row"
            >
              <div
                class="c13"
              >
                <span
                  class="c14"
                >
                  b
                </span>
              </div>
            </th>
            <td
              class="c17 "
            >
              <div
                class="c13"
              >
                <span
                  class="c18"
                >
                  m
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataTableColumns renders 2`] = `
.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  row-gap: 12px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 6px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 6px;
}

.c14 {
  box-sizing: border-box;
  stroke-width: 2px;
  stroke: #ffffff;
  width: 24px;
  height: 24px;
  stroke-width: 2px;
  stroke: #ffffff;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: start;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  padding: 0px;
  cursor: pointer;
  font-weight: 400;
  width: auto;
  border: 1px solid rgba(0, 0, 0, 0);
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: rgba(0, 0, 0, 0);
}

.c8 input:checked+span[class*=CheckBoxToggle]>span[class*=CheckBoxKnob] {
  left: 25px;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #ffffff;
}

.c13 {
  background: #008567;
  border-color: rgba(0, 0, 0, 0);
}

.c13:hover {
  background: #006750;
}

.c10 {
  flex-shrink: 0;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  padding-left: 42px;
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5::-webkit-input-placeholder {
  color: #676767;
}

.c5::-moz-placeholder {
  color: #676767;
}

.c5:-ms-input-placeholder {
  color: #676767;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  font-weight: 400;
}

.c5::-moz-placeholder {
  font-weight: 400;
}

.c5:-ms-input-placeholder {
  font-weight: 400;
}

.c2 {
  position: relative;
  width: 100%;
}

.c2 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

.c3 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 13px;
}

.c0 {
  min-height: 0;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    row-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 1px #ffffff;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 3px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  aria-label="Select columns Tab Contents"
  class="c0"
  role="tabpanel"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-label="Search"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
      <input
        autocomplete="off"
        class="c5"
        placeholder="Search"
        type="search"
        value=""
      />
    </div>
    <div
      class="c6"
    />
    <div
      aria-labelledby="test-data--select-columns-tab"
      class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
      id="test-data--select-columns"
      role="group"
    >
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 c13"
          >
            <svg
              class="c14"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          name
        </span>
      </label>
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 c13"
          >
            <svg
              class="c14"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          size
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`DataTableColumns renders 3`] = `
<div
  aria-label="Order columns Tab Contents"
  class="StyledTabs__StyledTabPanel-sc-a4fwxl-1 kwlwid"
  role="tabpanel"
>
  <div
    class="StyledBox-sc-13pk1d4-0 cafBSw"
  >
    .c8 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: rgba(0, 0, 0, 0.24);
  stroke: rgba(0, 0, 0, 0.24);
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c8 *[stroke*='#'],
.c8 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*='#'],
.c8 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c10 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

.c10 g {
  fill: inherit;
  stroke: inherit;
}

.c10 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c10 *[stroke*='#'],
.c10 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c10 *[fill-rule],
.c10 *[FILL-RULE],
.c10 *[fill*='#'],
.c10 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: flex-end;
}

.c4 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 24px;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

.c7 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #2e2e2e;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 500;
  padding: 8px 8px;
  background-color: rgba(0, 0, 0, 0);
  color: rgba(0, 0, 0, 0.24);
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
  opacity: 1;
  background-color: rgba(0, 0, 0, 0);
  color: rgba(0, 0, 0, 0.24);
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
  text-align: center;
  opacity: 1;
  cursor: default;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c7 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c7:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c7:focus >circle,
.c7:focus >ellipse,
.c7:focus >line,
.c7:focus >path,
.c7:focus >polygon,
.c7:focus >polyline,
.c7:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c7:focus ::-moz-focus-inner {
  border: 0;
}

.c7:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c7:focus:not(:focus-visible) >circle,
.c7:focus:not(:focus-visible) >ellipse,
.c7:focus:not(:focus-visible) >line,
.c7:focus:not(:focus-visible) >path,
.c7:focus:not(:focus-visible) >polygon,
.c7:focus:not(:focus-visible) >polyline,
.c7:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c7:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c9 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #2e2e2e;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 500;
  padding: 8px 8px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c9 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c9:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #2e2e2e;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c9:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
}

.c9:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c9:focus >circle,
.c9:focus >ellipse,
.c9:focus >line,
.c9:focus >path,
.c9:focus >polygon,
.c9:focus >polyline,
.c9:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c9:focus ::-moz-focus-inner {
  border: 0;
}

.c9:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible) >circle,
.c9:focus:not(:focus-visible) >ellipse,
.c9:focus:not(:focus-visible) >line,
.c9:focus:not(:focus-visible) >path,
.c9:focus:not(:focus-visible) >polygon,
.c9:focus:not(:focus-visible) >polyline,
.c9:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c2 {
  cursor: move;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c4 {
    width: 12px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<ul
      aria-labelledby="test-data--order-columns-tab"
      class="c0"
      id="test-data--order-columns"
      role="list"
    >
      <li
        class="c1 c2"
        draggable="true"
      >
        <span
          class="c3"
        >
          1
        </span>
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          name
        </div>
        <div
          class="c4"
        />
        <div
          class="c6"
        >
          <button
            aria-label="1 name move up"
            class="c7"
            disabled=""
            id="nameMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c8"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="1 name move down"
            class="c9"
            id="nameMoveDown"
            tabindex="0"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c10"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
      <li
        class="c1 c2"
        draggable="true"
      >
        <span
          class="c3"
        >
          2
        </span>
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          size
        </div>
        <div
          class="c4"
        />
        <div
          class="c6"
        >
          <button
            aria-label="2 size move up"
            class="c9"
            id="sizeMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c10"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="2 size move down"
            class="c7"
            disabled=""
            id="sizeMoveDown"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c8"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DataTableColumns search 1`] = `
.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 0 auto;
  justify-content: center;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #2e2e2e;
  font-weight: 500;
}

.c14 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 8px 8px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c3:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c3:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0, 0, 0, 0.36);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-top: 12px;
  padding-bottom: 11px;
}

.c7 >div {
  height: 100%;
  justify-content: center;
}

.c7 label {
  justify-content: center;
}

.c13 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0, 0, 0, 0.12);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-top: 12px;
  padding-bottom: 11px;
}

.c5 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c5 tbody tr:last-child td {
  border-color: transparent;
}

.c5 tbody tr:last-child th {
  border-color: transparent;
}

.c6 {
  position: relative;
  border-spacing: 0;
  border-collapse: separate;
  margin: 3px 0px;
  padding: 0px 3px;
}

.c12:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c12:focus >circle,
.c12:focus >ellipse,
.c12:focus >line,
.c12:focus >path,
.c12:focus >polygon,
.c12:focus >polyline,
.c12:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c12:focus ::-moz-focus-inner {
  border: 0;
}

.c12:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) >circle,
.c12:focus:not(:focus-visible) >ellipse,
.c12:focus:not(:focus-visible) >line,
.c12:focus:not(:focus-visible) >path,
.c12:focus:not(:focus-visible) >polygon,
.c12:focus:not(:focus-visible) >polyline,
.c12:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c12:last-child td {
  border-color: transparent;
}

.c12:last-child th {
  border-color: transparent;
}

.c11:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c11:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
    id="test-data"
  >
    <form
      class="c2"
    >
      <button
        aria-label="Open column selector"
        class="c3"
        id="test-data--columns-control"
        type="button"
      >
        <svg
          aria-label="Splits"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="M1 22h22V2H1v20zM8 2v20V2zm8 0v20V2z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </form>
    <table
      class="c5 c6"
    >
      <thead
        class="StyledTable__StyledTableHeader-sc-1m3u5g-4 StyledDataTable__StyledDataTableHeader-sc-xrlyjm-5"
      >
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2 "
        >
          <th
            class="c7 "
            id="grommet-data-table-header-name"
            scope="col"
          >
            <div
              class="c8"
            >
              <div
                class="c9 "
              >
                <span
                  class="c10"
                >
                  Name
                </span>
              </div>
            </div>
          </th>
          <th
            class="c7 "
            id="grommet-data-table-header-size"
            scope="col"
          >
            <div
              class="c8"
            >
              <div
                class="c9 "
              >
                <span
                  class="c10"
                >
                  Size
                </span>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="StyledTable__StyledTableBody-sc-1m3u5g-3 c11"
      >
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2 c12"
        >
          <th
            class="c13 "
            scope="row"
          >
            <div
              class="c9"
            >
              <span
                class="c10"
              >
                a
              </span>
            </div>
          </th>
          <td
            class="c13 "
          >
            <div
              class="c9"
            >
              <span
                class="c14"
              >
                s
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2 c12"
        >
          <th
            class="c13 "
            scope="row"
          >
            <div
              class="c9"
            >
              <span
                class="c10"
              >
                b
              </span>
            </div>
          </th>
          <td
            class="c13 "
          >
            <div
              class="c9"
            >
              <span
                class="c14"
              >
                m
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTableColumns search 2`] = `
.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  row-gap: 12px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 6px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 6px;
}

.c14 {
  box-sizing: border-box;
  stroke-width: 2px;
  stroke: #ffffff;
  width: 24px;
  height: 24px;
  stroke-width: 2px;
  stroke: #ffffff;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: start;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  padding: 0px;
  cursor: pointer;
  font-weight: 400;
  width: auto;
  border: 1px solid rgba(0, 0, 0, 0);
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: rgba(0, 0, 0, 0);
}

.c8 input:checked+span[class*=CheckBoxToggle]>span[class*=CheckBoxKnob] {
  left: 25px;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #ffffff;
}

.c13 {
  background: #008567;
  border-color: rgba(0, 0, 0, 0);
}

.c13:hover {
  background: #006750;
}

.c10 {
  flex-shrink: 0;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  padding-left: 42px;
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5::-webkit-input-placeholder {
  color: #676767;
}

.c5::-moz-placeholder {
  color: #676767;
}

.c5:-ms-input-placeholder {
  color: #676767;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  font-weight: 400;
}

.c5::-moz-placeholder {
  font-weight: 400;
}

.c5:-ms-input-placeholder {
  font-weight: 400;
}

.c2 {
  position: relative;
  width: 100%;
}

.c2 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

.c3 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 13px;
}

.c0 {
  min-height: 0;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    row-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 1px #ffffff;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 3px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  aria-label="Select columns Tab Contents"
  class="c0"
  role="tabpanel"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-label="Search"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
      <input
        autocomplete="off"
        class="c5"
        placeholder="Search"
        type="search"
        value=""
      />
    </div>
    <div
      class="c6"
    />
    <div
      aria-labelledby="test-data--select-columns-tab"
      class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
      id="test-data--select-columns"
      role="group"
    >
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 c13"
          >
            <svg
              class="c14"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          name
        </span>
      </label>
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 c13"
          >
            <svg
              class="c14"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          size
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`DataTableColumns search 3`] = `
<button
  aria-label="Open column selector"
  class="StyledButtonKind-sc-1vhfpnt-0 cRrDhZ"
  data-g-tabindex="none"
  id="test-data--columns-control"
  tabindex="-1"
  type="button"
>
  <svg
    aria-label="Splits"
    class="StyledIcon-sc-ofa7kd-0 iXbCzE"
    viewBox="0 0 24 24"
  >
    <path
      d="M1 22h22V2H1v20zM8 2v20V2zm8 0v20V2z"
      fill="none"
      stroke="#000"
      stroke-width="2"
    />
  </svg>
</button>
`;

exports[`DataTableColumns search 4`] = `
"@media only screen and (max-width: 768px) {
  .coNAXt {
    margin-top: 12px;
  }
}
@media only screen and (max-width: 768px) {
  .cIAsHI {
    padding: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .jKIcSI {
    margin: 0px;
  }
}
@media only screen and (max-width: 768px) {
  .jKIcSI {
    border: solid 1px rgba(0, 0, 0, 0);
  }
}
@media only screen and (max-width: 768px) {
  .jKIcSI {
    padding-left: 5px;
    padding-right: 5px;
  }
}
@media only screen and (max-width: 768px) {
  .jKIcSI {
    padding-top: 5px;
  }
}
@media only screen and (max-width: 768px) {
  .jKIcSI {
    padding-bottom: 5px;
  }
}
@media only screen and (max-width: 768px) {
  .dEiZhn {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .dIENLv {
    margin: 0px;
  }
}
@media only screen and (max-width: 768px) {
  .dIENLv {
    row-gap: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bDSdwN {
    margin-right: 12px;
  }
}
@media only screen and (max-width: 768px) {
  .kujSId {
    border: solid 1px #ffffff;
  }
}
@media only screen and (max-width: 768px) {
  .cafBSw {
    padding-top: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .dYOxnw {
    padding: 0px;
  }
}
@media only screen and (max-width: 768px) {
  .gQiBjL {
    width: 8px;
  }
}
@media only screen and (max-width: 768px) {
  .ffrHHp {
    height: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bQlCmd {
    width: 12px;
  }
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .bdKJMF {
    display: flex;
    align-items: stretch;
  }
}
.cRrDhZ {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 8px 8px;
  text-align: center;
  transition-property: color, background-color, border-color, box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}
.cRrDhZ > svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}
.cRrDhZ:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}
.cRrDhZ:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}
.cRrDhZ:focus > circle,
.cRrDhZ:focus > ellipse,
.cRrDhZ:focus > line,
.cRrDhZ:focus > path,
.cRrDhZ:focus > polygon,
.cRrDhZ:focus > polyline,
.cRrDhZ:focus > rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}
.cRrDhZ:focus ::-moz-focus-inner {
  border: 0;
}
.cRrDhZ:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}
.cRrDhZ:focus:not(:focus-visible) > circle,
.cRrDhZ:focus:not(:focus-visible) > ellipse,
.cRrDhZ:focus:not(:focus-visible) > line,
.cRrDhZ:focus:not(:focus-visible) > path,
.cRrDhZ:focus:not(:focus-visible) > polygon,
.cRrDhZ:focus:not(:focus-visible) > polyline,
.cRrDhZ:focus:not(:focus-visible) > rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}
.cRrDhZ:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}"
`;
